# SeamCarving

./: .gitignore  CMakeLists.txt  README.txt  build_and_run.bat
src/: SeamCarver.cpp  SeamCarver.hpp  main.cpp
